--- a/style.css
+++ b/style.css
@@ -80,16 +80,16 @@ grid-template-rows: 100px 100px; */
 }
 
 
-ul#team-list {
+ul#team-list{
     list-style-type: none;
-    padding: 0px;
+    padding:0;
 }
 
-ul#team-list li {
+ul#team-list li{
+    margin: 5px;
     border: 1px solid black;
     display: flex;
     align-items: center;
-    margin: 5px;
 }
 
 ul#team-list img {
