--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ grid-template-rows: 100px 100px; */
     "header header header"
     "selector selector selector"
     "details details team"
-    "evolution evolution evolution"
+    "versions versions versions"
     "recent recent recent";
     grid-gap: 5px;
     max-width: 800px;
@@ -97,8 +97,8 @@ ul#team-list img {
     width: 50px;
 }
 
-#evolution {
-    grid-area: evolution;
+#versions {
+    grid-area: versions;
 }
 
 #recent {
