--- a/style.css
+++ b/style.css
@@ -58,13 +58,25 @@ grid-template-rows: 100px 100px; */
     grid-area: details-title;
 }
 
+#details-img-container {
+    text-align: center;
+    object-fit: 200%;
+}
+
 #details-img-container img {
     grid-area: details-img;
-    width: 100px;
+    width: 150px;
+    
 }
 
 #details-text {
     grid-area: details-text;
+}
+
+#details-text div {
+    padding: 5px;
+    border: 1px solid black;
+    margin: 5px;
 }
 
 #details-sub-text {
