centering image of current pokemon in 150 x 150 container

--- a/style.css
+++ b/style.css
@@ -60,13 +60,16 @@ grid-template-rows: 100px 100px; */
 
 #details-img-container {
     text-align: center;
-    object-fit: 200%;
+    width: 150px; /* width of container */
+    height: 150px; /* height of container */
+    overflow: hidden; /* hides image that goes beyond container*/
 }
 
 #details-img-container img {
     grid-area: details-img;
-    width: 150px;
-    
+    width: 200px; /* image size */
+    object-fit: cover;
+    margin: -25px -180px 0px -180px;
 }
 
 #details-text {
